--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.4",
+    "next": "14.2.3",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-datepicker": "^6.2.0",
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
