--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
     "react-toastify": "^10.0.5",
     "zod": "^3.23.8"
